# osintool

./: .gitignore  LICENSE  README.md  founds.py  pyproject.toml  termux.sh
osintool/: crypto.py  github_search.py  main.py  notify.py  report.py  result.py  sites.py
osintool/auth/: __init__.py  config.py  github.py  instagram.py  reddit.py  telegram.py  whatsapp.py
osintool/resources/: names.json  phones.json  usernames.json
