[project]
name = "osintool"
version = "1.0.0"
description = "Multi-purpose OSINT search tool for usernames, names, and phone numbers"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.22.0",
    "colorama>=0.4.1",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
auth = ["instagrapi", "pygithub", "praw", "telethon", "playwright", "selenium"]

[project.scripts]
osintool = "osintool.main:main"
